# mr_SHERPA7000

./: README.md  package.xml
doc/: connect_rp.md  mecanum_wheels_implementation_plan.md
minmax_description/: CMakeLists.txt  package.xml
minmax_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
minmax_description/meshes/: 1.25 2pin-1.stl  1.25 2pin-2.stl  1.25 4pin.stl  6807.stl  Component10.stl  Component11.stl  Component13.stl  Component14.stl  Component16.stl  Component19.stl  Component2.stl  Component20.stl  Component21.stl  Component3.stl  Component4.stl  Component5.stl  Component6.stl  Component7.stl  Component8.stl  Component9.stl  base_link.stl  cam_v5_1.stl  front_left_wheel_1.stl  short metal version-2.stl
minmax_description/urdf/: materials.xacro  minmax.gazebo  minmax.trans  minmax.xacro
perception/hall_sensor/: MT60701_node.py  MT6701_driver.py  MT6701_test.py  mt60701_node.py
resources/guides/: git_github_guide.md  lidar_test.md
sherpa_actuation/: CMakeLists.txt  package.xml
sherpa_actuation/include/: motor_controller.h  tb6612fng.h
sherpa_actuation/include/sherpa_actuation/: gpio_controller.h  motor_controller.h  motor_node.h  pca9685.h  tb6612fng.h
sherpa_actuation/launch/: actuation.launch  motor_test.launch
sherpa_actuation/scripts/: i2c_test.py  motor_test.py  simple_i2c_test.py
sherpa_actuation/src/: gpio_controller.cpp  motor_controller.cpp  motor_node.cpp  pca9685.cpp  tb6612fng.cpp
sherpa_bringup/: CMakeLists.txt  package.xml
sherpa_bringup/launch/: octomap.launch  robot.launch  sherpa.launch  sherpa_complete.launch  sherpa_lidar_visualization.launch  sherpa_mapping.launch  sherpa_octomap.launch  sherpa_simulation.launch  sherpa_voxel_visualization.launch  simulation.launch  visualization.launch
sherpa_bringup/launch/include/: controllers.launch.xml  sensors.launch.xml
sherpa_bringup/rviz/: sherpa_simulation.rviz  sherpa_voxel.rviz
sherpa_control/: CMakeLists.txt  package.xml  package.xml.bak
sherpa_control/config/: gazebo_interface.yaml  localization.yaml  mecanum_control.yaml  sherpa_control.yaml
sherpa_control/include/sherpa_control/: gpio_controller.h
sherpa_control/launch/: control.launch  mecanum_control.launch  sherpa_control.launch
sherpa_control/src/: gpio_controller.cpp
sherpa_description/: CMakeLists.txt  package.xml
sherpa_description/launch/: debug.launch  load.launch
sherpa_description/meshes/: front_right_wheel_1.stl  mecanum_wheel.dae  rear_left_wheel_1.stl  rear_right_wheel_1.stl
sherpa_description/resources/: sherpa.urdf
sherpa_description/rviz/: sherpa_lidar.rviz  sherpa_octomap.rviz  smb_description.rviz
sherpa_description/src/: OdometrySource.cpp
sherpa_description/urdf/: sherpa.gazebo  sherpa.urdf.xacro  sherpa_big_properties.urdf.xacro  sherpa_lidar_mount.urdf.xacro  sherpa_ros_control.gazebo.xacro  sherpa_ros_mecanum.gazebo.xacro  sherpa_ros_skid_steer.gazebo.xacro  sherpa_standalone.urdf.xacro  sherpa_utils.urdf.xacro
sherpa_description/urdf/sensor_plugins/: sherpa_blackfly.gazebo.xacro  sherpa_blackfly_stereo.gazebo.xacro  sherpa_depth.gazebo.xacro  sherpa_gps.gazebo.xacro  sherpa_imu.gazebo.xacro  sherpa_mono.gazebo.xacro  sherpa_odometry.gazebo.xacro  sherpa_rplidar.gazebo.xacro  sherpa_velodyne.gazebo.xacro  smb_depth.gazebo.xacro
sherpa_gazebo/: CMakeLists.txt  package.xml
sherpa_gazebo/config/: publishers.yaml
sherpa_gazebo/launch/: sherpa_gazebo.launch
sherpa_gazebo/worlds/: sherpa_world.world
sherpa_mapping/: CMakeLists.txt  package.xml
sherpa_mapping/launch/: 3d_voxel_mapping.launch  mapping.launch  voxel_test.launch
sherpa_mapping/rviz/: 3d_mapping.rviz  mapping.rviz  octomap_test.rviz
sherpa_mapping/scripts/: simple_voxel_publisher.py  voxel_3d_mapper.py
sherpa_msgs/: CMakeLists.txt  package.xml
sherpa_perception/camera/: aruco_board_detection.py  aruco_detection.cpp  aruco_detection.py  aruco_nano.h  calib_image_takers.py  calibrate_camera.py  calibration_data.npz  capture_calibration.py  marker_gen.md
sherpa_perception/hall_sensor/: mt6701_callib.py  mt6701_driver.py  mt6701_test.py  package.xml
sherpa_perception/mpu6050_imu/: CMakeLists.txt  imu_listener.py  mpu6050_imu_node.py  package.xml
sherpa_perception/mpu6050_imu/launch/: mpu6050_imu.launch
sherpa_perception/rplidar_ros/launch/: sherpa_rplidar.launch  sherpa_rplidar_sim.launch  view_sherpa_rplidar.launch
sherpa_sensors/: CMakeLists.txt  package.xml
sherpa_teleop/: CMakeLists.txt  package.xml  start_teleop.py
sherpa_teleop/launch/: keyboard_teleop.launch  sherpa_teleop.launch
sherpa_teleop/scripts/: better_teleop.py
