<?xml version="1.0"?>
<package format="2">
  <name>sherpa</name>
  <version>0.1.0</version>
  <description>Metapackage for the Sherpa robot</description>
  <maintainer email="davidmeister90@gmail.com">MasterD</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <metapackage/>
  </export>
</package>