<?xml version="1.0"?>
<package format="2">
  <name>sherpa_actuation</name>
  <version>0.0.1</version>
  <description>Hardware actuation package for SHERPA robot</description>

  <maintainer email="your.email@example.com">SHERPA Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sherpa_control</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>i2c-tools</exec_depend>

  <export>
  </export>
</package>