<?xml version="1.0"?>
<package format="2">
  <name>sherpa_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for bringing up the Sherpa robot</description>
  <maintainer email="davidmeister90@gmail.com">David Meister</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <exec_depend>sherpa_description</exec_depend>
  <exec_depend>sherpa_control</exec_depend>
  <exec_depend>sherpa_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
