<?xml version="1.0"?>
<package format="2">
  <name>sherpa_control</name>
  <version>0.1.0</version>
  <description>Control package for Sherpa robot</description>
  <maintainer email="davidmeister90@gmail.com">MasterD</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>diff_drive_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>