<?xml version="1.0"?>
<package format="2">
  <name>sherpa_description</name>
  <version>0.1.1</version>
  <description>Super mega bot description</description>
  <maintainer email="davidmeister90@gmail.com">David Meister</maintainer>
  <license>BSD</license>
  <url type="website"> https://bitbucket.org/leggedrobotics/sherpa </url>
  <author email="koen.kraemer@mavt.ethz.ch">Koen Kraemer</author>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>roslib</depend>
  <depend>hector_gazebo_plugins</depend>
</package>
