<?xml version="1.0"?>
<package format="2">
  <name>sherpa_gazebo</name>
  <version>0.1.0</version>
  <description>sherpa Gazebo plugins</description>
  <maintainer email="koen.kraemer@mavt.ethz.ch">Koen Kraemer</maintainer>
  <license>Proprietary</license>
  <url type="website">https://bitbucket.org/leggedrobotics/sherpa</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>sherpa_description</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>sherpa_control</exec_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
