<?xml version="1.0"?>
<package format="2">
  <name>sherpa_mapping</name>
  <version>0.1.0</version>
  <description>
    Ein Paket für die Sherpa-Roboter-Kartierung mit verschiedenen SLAM-Algorithmen
  </description>

  <maintainer email="user@example.com">Maintainer Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>octomap_ros</exec_depend>

  <export>
    <!-- Nichts zu exportieren -->
  </export>
</package>