<?xml version="1.0"?>
<package format="2">
  <name>sherpa_teleop</name>
  <version>0.1.0</version>
  <description>Teleoperation package for Sherpa robot</description>
  <maintainer email="davidmeister90@gmail.com">MasterD</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>